--- a/test_loss.ipynb
+++ b/test_loss.ipynb
@@ -22,9 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CusomDataGen(tf.keras.utils.Sequence):\n",
+    "class DataGenerator(tf.keras.utils.Sequence):\n",
     "\n",
-    "    def __init__(self,X,y,batch_size,batch_rep,inp_rep_prob,ensemble_size,input_size,shuffle=True):\n",
+    "    def __init__(self,X,y,batch_size,batch_rep,inp_rep_prob,ensemble_size,shuffle=True):\n",
     "        self.X = X\n",
     "        self.y = y\n",
     "        self.batch_size = batch_size\n",
@@ -33,7 +33,6 @@
     "        self.batch_rep = batch_rep\n",
     "        self.inp_rep_prob = inp_rep_prob\n",
     "        self.n = X.shape[0]\n",
-    "        self.input_size = input_size\n",
     "\n",
     "    def on_epoch_end(self):\n",
     "        if self.shuffle:\n",
@@ -106,20 +105,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def wide_resnet(input_shape,d,w_mult,n_classes,batch_rep,inp_rep_prob, l_2=0):\n",
+    "def wide_resnet(input_shape,d,w_mult,n_classes,l_2=0):\n",
     "    n_blocks = (d - 4) // 6\n",
     "    input_shape = list(input_shape)\n",
     "    ensemble_size = input_shape[0]\n",
     "\n",
     "    input = Input(shape=input_shape)\n",
     "\n",
-    "    \n",
-    "\n",
     "    x = Permute([2,3,4,1])(input)\n",
     "\n",
     "    # Reshape so that each subnetwork has 3 channels\n",
     "    x = Reshape(input_shape[1:-1] + [input_shape[-1] * ensemble_size])(x)\n",
-    "\n",
     "\n",
     "    x = Conv2D(16,3,padding ='same',use_bias=False,kernel_initializer=\"he_normal\",kernel_regularizer=l2(l_2))(x)\n",
     "\n",
@@ -134,7 +130,6 @@
     "    x = Dense(n_classes*ensemble_size,kernel_initializer='he_normal',activation=None,kernel_regularizer=l2(l_2),bias_regularizer=l2(l_2))(x)\n",
     "    x = Reshape([ensemble_size,n_classes])(x)\n",
     "    \n",
-    "    #return CustomModel(ensemble_size, batch_rep,inp_rep_prob, n_classes,input,x)\n",
     "    return tf.keras.Model(input,x)"
    ]
   },
@@ -145,9 +140,7 @@
    "outputs": [],
    "source": [
     "class NLL(Loss):\n",
-    "\n",
     "    def call(self, y_true, y_pred):\n",
-    "\n",
     "        loss = tf.keras.losses.sparse_categorical_crossentropy(y_true, y_pred, from_logits=True)\n",
     "        nll = tf.reduce_mean(tf.reduce_sum(loss, axis=1))\n",
     "        return nll"
@@ -159,39 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.cifar10.load_data()\n",
     "x_train = (x_train.astype('float32') / 256 ) - 0.5\n",
-    "x_test =(x_test.astype('float32') / 256 ) - 0.5\n",
-    "#y_train = to_categorical(y_train, num_classes=10)\n",
-    "#y_test = to_categorical(y_test, num_classes=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(50000, 1)"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train.shape"
+    "x_test =(x_test.astype('float32') / 256 ) - 0.5"
    ]
   },
   {
@@ -212,19 +175,6 @@
     "val_split = 0.1\n",
     "l_2 = 3e-4\n",
     "steps_per_epoch = x_train.shape[0] * 1 - val_split\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metrics = [Mean(name=\"nll\"), SparseCategoricalAccuracy(\"accuracy\")]\n",
-    "\n",
-    "for i in range(ensemble_size):\n",
-    "    metrics.append(Mean(f\"nll_member_{i}\"))\n",
-    "    metrics.append(SparseCategoricalAccuracy(f\"accuracy_member_{i}\"))"
    ]
   },
   {
@@ -278,15 +228,15 @@
     }
    ],
    "source": [
-    "traing_data=CusomDataGen(x_train,y_train,batch_size,batch_rep,inp_rep_prob,ensemble_size,input_shape)\n",
-    "model = wide_resnet(input_shape,d,w_mult,n_classes,batch_rep,inp_rep_prob, l_2)\n",
+    "traing_data=DataGenerator(x_train,y_train,batch_size,batch_rep,inp_rep_prob,ensemble_size)\n",
+    "model = wide_resnet(input_shape,d,w_mult,n_classes, l_2)\n",
     "\n",
     "lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
     "    0.1,\n",
     "    decay_steps=steps_per_epoch,\n",
     "    decay_rate=0.1)\n",
     "\n",
-    "optimizer = tf.keras.optimizers.SGD(lr_schedule, momentum=0.9, nesterov=True)\n",
+    "optimizer = tf.keras.optimizers.SGD(lr_schedule)\n",
     "\n",
     "model.compile(optimizer,loss = NLL())\n",
     "model.fit(traing_data,epochs=epochs)"
