added accuracy metric

--- a/test.ipynb
+++ b/test.ipynb
@@ -12,7 +12,6 @@
     "from tensorflow.keras.regularizers import l2,l1_l2\n",
     "from tensorflow.keras.losses import Loss\n",
     "from tensorflow.keras.metrics import Mean,SparseCategoricalAccuracy\n",
-    "from tensorflow.keras.utils import to_categorical\n",
     "import numpy as np"
    ]
   },
@@ -152,6 +151,65 @@
     "        loss = tf.keras.losses.sparse_categorical_crossentropy(y_true, y_pred, from_logits=True)\n",
     "        nll = tf.reduce_mean(tf.reduce_sum(loss, axis=1))\n",
     "        return nll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_17566/2912352669.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mAccuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMetric\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_classes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Accuracy\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_weight\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'acc'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minitializer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'zeros'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class Accuracy(tf.keras.metrics.Metric):\n",
+    "\n",
+    "    def __init__(self, n_classes,name=\"Accuracy\", dtype=None, **kwargs):\n",
+    "        super().__init__(name=name, dtype=dtype, **kwargs)\n",
+    "        self.accuracy = self.add_weight(name='acc', initializer='zeros')\n",
+    "        self.n_classes = n_classes\n",
+    "        self.training = tf.Variable(True)\n",
+    "\n",
+    "    def update_state(self, labels,logits):\n",
+    "        probs = tf.nn.softmax(tf.reshape(logits, [-1, self.n_classes]))\n",
+    "        if self.training:\n",
+    "            labels = tf.reshape(labels, [-1])\n",
+    "        else:\n",
+    "            probs = tf.math.reduce_mean(probs, axis=1) \n",
+    "\n",
+    "        accuracy = tf.keras.metrics.sparse_categorical_accuracy(labels,probs)\n",
+    "        self.accuracy.assign_add(accuracy)\n",
+    "\n",
+    "    def result(self):\n",
+    "        return sefl.accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ToggleMetrics(tf.keras.callbacks.Callback):\n",
+    "    '''On test begin (i.e. when evaluate() is called or \n",
+    "     validation data is run during fit()) toggle metric flag '''\n",
+    "    def on_test_begin(self, logs):\n",
+    "        for metric in self.model.metrics:\n",
+    "            if 'Accuracy' in metric.name:\n",
+    "                metric.on.assign(False)\n",
+    "    def on_test_end(self,  logs):\n",
+    "        for metric in self.model.metrics:\n",
+    "            if 'Accuracy' in metric.name:\n",
+    "                metric.on.assign(True)"
    ]
   },
   {
